# truck-tools

./: .gitignore  .prettierignore  CLAUDE.md  README.md  Romanian.json  eslint.config.js  index.html  package-lock.json  package.json  pnpm-workspace.yaml  tailwind.config.js  tsconfig.json  version  vite.config.ts
.github/: FUNDING.yml
.github/workflows/: build-app.yml
packaging/arch/: PKGBUILD
packaging/rpm/: .gitignore  truck-tools.spec
public/md-dark-indigo/: theme.css
public/md-light-indigo/: theme.css
src/: App.tsx  hero.ts  main.tsx  styles.css  vite-env.d.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json  updater.json
src-tauri/capabilities/: desktop.json  migrated.json
src-tauri/src/: file_edit.rs  lib.rs  main.rs
src-tauri/src/embeds/: trucks_data_ats.json  trucks_data_ets2.json
src-tauri/src/main_options/: accessories.rs  license_plate.rs  mod.rs  profiles.rs  trailers.rs  truck_engines.rs  truck_transmissions.rs  trucks.rs  trucks_data_export.rs  vehicles_player.rs
src-tauri/src/main_options/trucks_engines_data/: daf.rs  iveco.rs  man.rs  mercedes.rs  mod.rs  renault.rs  scania.rs  volvo.rs
src-tauri/src/main_options/trucks_transmissions_data/: daf.rs  iveco.rs  man.rs  mercedes.rs  mod.rs  renault.rs  scania.rs  volvo.rs
src-tauri/src/structs/: accessories_strucs.rs  experience_skills.rs  file_path.rs  mod.rs  responses.rs  vec_items_find.rs  vec_items_replace.rs  vec_save_games.rs  vec_trailers.rs  vec_trucks.rs  vec_trucks_id.rs  vec_vehicles_player.rs
src-tauri/src/utils/: compress_folder.rs  decrypt_saves.rs  file_edit.rs  mod.rs  player_vehicles.rs  vec_items_replace.rs
src/components/: AboutModal.tsx  AlertSave.tsx  AlertSaveChip.tsx  CustomLicensePlate.tsx  CustomRadio.tsx  ListProfiles.tsx  ListSaves.tsx  OptionCard.tsx  ProfileOptions.tsx  SelectProfile.tsx  TrailersOptions.tsx  UpdaterModal.tsx  Warning.tsx
src/components/Modals/: AboutModal.tsx  SettingsModal.tsx  UpdaterModal.tsx
src/components/ProfileMenu/: ListProfiles.tsx  ListSaves.tsx  ProfileCardBody.tsx  ProfileError.tsx  ProfileOptions.tsx  RenderProfile.tsx  SelectProfile.tsx  SelectProfileObject.tsx
src/components/ProfileMenu/Dropdown/: ListProfilePrimeRe.tsx  ListProfilesDropdown.tsx  ListProfilesDropdownCopyConfig.tsx  ListSavePrimeRe.tsx  ListSavesDropdown.tsx
src/components/ProfileMenu/Modal/: BackupProfile.tsx  CloneProfile.tsx  CopyConfig.tsx  RenameProfile.tsx
src/hooks/: useDarkModeContex.tsx  useLocaleContext.tsx  useProfileContex.tsx
src/routes/: Router.tsx
src/routes/pages/: Home.tsx  RenderOptions.tsx  TrailersOptions.tsx
src/routes/pages/ProfilesOptions/: ProfilesOptions.tsx
src/routes/pages/TrailersOptions/: TrailersOptions.tsx
src/routes/pages/TrucksOptions/: TrucksOptions.tsx
src/translations/: README.md  de-DE.json  en-US.json  es-CL.json  fr-FR.json  hu-HU.json  it-IT.json  jp-JP.json  ko-KR.json  pl-PL.json  pt-BR.json  ro-RO.json  ru-RU.json  tr-TR.json  uk-UA.json  vi-VN.json  zh-CN.json  zh-Hans.json  zh-Hant.json
src/translations/en-US/: about.json  player_profile.json  settings.json  trailers.json
src/translations/en-US/components/: profile_error.json  updater.json
src/translations/en/US/: about.json  player_profile.json  profile.json  settings.json  trailers.json  trucks.json
src/translations/es-CL/: about.json  player_profile.json  profile.json  settings.json  trailers.json  trucks.json
src/types/: ConstTypes.d.ts  ContexTypes.d.ts  ReactTypes.d.ts  SaveGameTypes.d.ts  TranslationsTypes.d.ts  TrucksTypes.d.ts  fileEditTypes.d.ts
src/types/translations/: about.d.ts  player_profile.d.ts  profile.d.ts  settings.d.ts  trailers.d.ts  trucks.d.ts
src/utils/: Brands.ts  fileEdit.ts
src/utils/workers/: arrFile.ts  findMyTrailerId.ts  findTrailerIndex.ts  getSlaveTrailersId.ts  setCargoMassTrailer.ts
(+35 files in other folders)
