[package]
name = "trucktools"
version = "0.12.1"
description = "Truck Tools"
authors = ["SiberianCoffe"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
tauri = { version = "2.5.1", features = ["protocol-asset"] }
tauri-plugin-store = "2.2.1"
tauri-plugin-dialog = "2.2.2"
tauri-plugin-fs = "2.3.0"
tauri-plugin-shell = "2.2.2"
tauri-plugin-process = "2.2.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
cached = "0.55.1"
libloading = "0.8.8"
hex = "0.4.3"
walkdir = "2.5.0"
zip = "4.1.0"
tauri-plugin-os = "2.2.2"

[dependencies.uuid]
version = "1.17.0"
features = ["v4"]

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
