[package]
name = "trucktools"
version = "0.12.5"
description = "Truck Tools"
authors = ["SiberianCoffe"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
tauri = { version = "2.11.3", features = ["protocol-asset"] }
tauri-plugin-store = "2.4.3"
tauri-plugin-dialog = "2.7.1"
tauri-plugin-fs = "2.5.1"
tauri-plugin-shell = "2.3.5"
tauri-plugin-process = "2.3.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
cached = "2.0.2"
libloading = "0.9.0"
hex = "0.4.3"
walkdir = "2.5.0"
zip = "8.6.0"
tauri-plugin-os = "2.3.2"

[dependencies.uuid]
version = "1.23.4"
features = ["v4"]

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
